// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches forest theme snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 8,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  />
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderBottomColor": "#22C55E",
          "borderBottomLeftRadius": 9,
          "borderBottomRightRadius": 9,
          "borderBottomWidth": 1,
          "borderLeftColor": "#22C55E",
          "borderLeftWidth": 1,
          "borderRightColor": "#22C55E",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "#22C55E",
          "borderTopLeftRadius": 9,
          "borderTopRightRadius": 9,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <TextInput
        accessibilityState={
          {
            "disabled": false,
          }
        }
        editable={true}
        focusVisibleStyle={
          {
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        focusable={true}
        keyboardType="default"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#6B6B76"
        secureTextEntry={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderBottomColor": "hsl(0, 0%, 92.0%)",
            "borderBottomLeftRadius": 9,
            "borderBottomRightRadius": 9,
            "borderBottomWidth": 0,
            "borderLeftColor": "hsl(0, 0%, 92.0%)",
            "borderLeftWidth": 0,
            "borderRightColor": "hsl(0, 0%, 92.0%)",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "hsl(0, 0%, 92.0%)",
            "borderTopLeftRadius": 9,
            "borderTopRightRadius": 9,
            "borderTopWidth": 0,
            "color": "#18181F",
            "flex": 1,
            "fontFamily": "Inter_400Regular",
            "fontSize": 14,
            "height": "100%",
            "letterSpacing": 0,
            "minWidth": 0,
            "outlineWidth": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          }
        }
        value="Hello"
      />
    </View>
  </View>
</View>
`;

exports[`Input matches midnight theme snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 8,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  />
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderBottomColor": "#FF6B5E",
          "borderBottomLeftRadius": 9,
          "borderBottomRightRadius": 9,
          "borderBottomWidth": 1,
          "borderLeftColor": "#FF6B5E",
          "borderLeftWidth": 1,
          "borderRightColor": "#FF6B5E",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "#FF6B5E",
          "borderTopLeftRadius": 9,
          "borderTopRightRadius": 9,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <TextInput
        accessibilityState={
          {
            "disabled": false,
          }
        }
        editable={true}
        focusVisibleStyle={
          {
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        focusable={true}
        keyboardType="default"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#6B6B76"
        secureTextEntry={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderBottomColor": "hsl(0, 0%, 92.0%)",
            "borderBottomLeftRadius": 9,
            "borderBottomRightRadius": 9,
            "borderBottomWidth": 0,
            "borderLeftColor": "hsl(0, 0%, 92.0%)",
            "borderLeftWidth": 0,
            "borderRightColor": "hsl(0, 0%, 92.0%)",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "hsl(0, 0%, 92.0%)",
            "borderTopLeftRadius": 9,
            "borderTopRightRadius": 9,
            "borderTopWidth": 0,
            "color": "#18181F",
            "flex": 1,
            "fontFamily": "Inter_400Regular",
            "fontSize": 14,
            "height": "100%",
            "letterSpacing": 0,
            "minWidth": 0,
            "outlineWidth": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          }
        }
        value="Hello"
      />
    </View>
  </View>
</View>
`;

exports[`Input matches sunrise theme snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 8,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  />
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderBottomColor": "#E7E7EF",
          "borderBottomLeftRadius": 9,
          "borderBottomRightRadius": 9,
          "borderBottomWidth": 1,
          "borderLeftColor": "#E7E7EF",
          "borderLeftWidth": 1,
          "borderRightColor": "#E7E7EF",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "#E7E7EF",
          "borderTopLeftRadius": 9,
          "borderTopRightRadius": 9,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <TextInput
        accessibilityState={
          {
            "disabled": false,
          }
        }
        editable={true}
        focusVisibleStyle={
          {
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        focusable={true}
        keyboardType="default"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#6B6B76"
        secureTextEntry={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderBottomColor": "hsl(0, 0%, 92.0%)",
            "borderBottomLeftRadius": 9,
            "borderBottomRightRadius": 9,
            "borderBottomWidth": 0,
            "borderLeftColor": "hsl(0, 0%, 92.0%)",
            "borderLeftWidth": 0,
            "borderRightColor": "hsl(0, 0%, 92.0%)",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "hsl(0, 0%, 92.0%)",
            "borderTopLeftRadius": 9,
            "borderTopRightRadius": 9,
            "borderTopWidth": 0,
            "color": "#18181F",
            "flex": 1,
            "fontFamily": "Inter_400Regular",
            "fontSize": 14,
            "height": "100%",
            "letterSpacing": 0,
            "minWidth": 0,
            "outlineWidth": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          }
        }
        value="Hello"
      />
    </View>
  </View>
</View>
`;
